--- a/.gitignore
+++ b/.gitignore
@@ -413,3 +413,6 @@ FodyWeavers.xsd
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,visualstudiocode
+
+# .DS_Store
+**/.DS_Store
